# LoudPy

./: .gitignore  README.md  pyproject.toml
LoudPy_exemples/Eigen_study/: Loading_script.py  Running_script.py
LoudPy_exemples/Frequency_study/FSI/: Loading_script.py  Running_scrip.py
LoudPy_exemples/Frequency_study/Meca/: Loading_script.py  Running_scrip.py
LoudPy_exemples/Geometries/Loudspeaker/: HPNEW-Sketch.brep  HPNEW-Sketch.geo  HPNEW-Sketch.geo.opt  HPNEW-Sketch.msh  HPNEW-Sketch.step  HPNEW.FCStd  prepare_geo.py
LoudPy_exemples/Geometries/Symetric_membrane/: exemple_brep_file.brep  exemple_geo_file.geo
LoudPy_exemples/Geometries/membrane_w_surround/: exemple_brep_file.brep  exemple_geo_file.geo
LoudPy_exemples/Time_study/Multitone/: Loading_script.py  Running_script.py
src/loudpy/: ObjectsGeo.py  PhysicalEntitiesManager.py  SimObjects.py  __init__.py
src/loudpy/Files_Loader/: Core_Models.py  Field_Operations_Helpers.py  Load_Domains.py  Mesh_Loader.py  Readers.py  __init__.py
src/loudpy/Files_Saver/: Mesh_topology.py  Result_Store.py  Saving_Helpers.py  Study_Saver.py  __init__.py
src/loudpy/Finite_Elements_formulations/: FE_kernels.py  Gauss_Quadratures.py  __init__.py
src/loudpy/Interfaces/: InterfaceAcouMeca.py  InterfaceConstrained.py  InterfaceConstrainted.py  InterfaceForced.py  __init__.py
src/loudpy/Materials_Bank/: materials.json
src/loudpy/Meshing/: Cleaning_step_file.py  MeshManager.py  __init__.py
src/loudpy/Plotter/: __init__.py  field_plots.py  signal_plots.py
src/loudpy/Studies/: DofMapMixin.py  Eigen_study.py  (+4 more)
(+22 files in other folders)
